feature: add new task with schema endpoint, improve role mapper in the engine
